--- a/views/index.ejs
+++ b/views/index.ejs
@@ -20,6 +20,9 @@
           <li style="display: inline; margin-right: 30px; margin-bottom: 5px;">
             <a href="/analytics-monthly" style="text-decoration: none; color: #ecf0f1; font-size: 18px; font-weight: bold; transition: color 0.3s ease;">月次分析</a>
           </li>
+           <li style="display: inline; margin-right: 30px; margin-bottom: 5px;">
+            <a href="/reports" style="text-decoration: none; color: #ecf0f1; font-size: 18px; font-weight: bold; transition: color 0.3s ease;">報告書</a>
+          </li>
           <li style="display: inline; margin-right: 30px; margin-bottom: 5px;">
             <a href="/admin" style="text-decoration: none; color: #ecf0f1; font-size: 18px; font-weight: bold; transition: color 0.3s ease;">管理者</a>
           </li>
